			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * PORT: check for -pthreads in addition to -pthread.  Lucas Barbuto.

  * FIXED: Bug#299: possible that between(+Low, inf, X) *only* returns
    X == Low.  Keri Harris.

  * PORT: Bug#298: enhance systems supporting cpu_count flag.  Keri Harris.
    Also added support for sysctlbyname() to get this value for MacOS X.
	
  * FIXED: Some issues in **/1 (pow) using integers.  Ulrich Neumerkel.

  * FIXED: concurrent/2.  After test program by Markus Triska.

  * FIXED: Properly handle errors from DdeAccessData().  Still unclear 
    why this function fails though??

  * FIXED: Bug#297: Memory leak in arithmetic overflow of <<.  Keri Harris.

  * FIXED: Bug#295: compilation issues in different modes (not really
    used anymore).  Keri Harris.

  * FIXED: Handle interrupt/abort during atom and functor creation.
    Ulrich Neumerkel.

  * ENHANCED: Clarify undefined predicate messages from toplevel.
    Ulrich Neumerkel.

  * FIXED: Possible crash in profiler wehn using with JPL.  Alexandre Vautier.

  * FIXED: statistics on atoms freed by atom-GC to use 64-bit counter on
    all platforms.  Ulrich Neumerkel.

  * MODIFIED: Allow for modern style --help, etc. commandline options.
    Ulrich Neumerkel.

  * MODIFIED: Instantiation by cleanup-handler of call_cleanup/[2,3] has
    been made visible to the outside world.   Ulrich Neumerkel.

  * DOCS: various minor updates.  Ulrich Neumerkel.

  * FIXED: error message when trying to reposition user streams and
    the type-property for user streams.  Ulrich Neumerkel.

  * ENHANCED: intended caching of character-code -> atom was actually
    not functional.

  * FIXED: Possible crash in read/1.   Ulrich Neumerkel.
